Cambios en proyecto prueba estadistica

--- a/python/prueba_estadística/prueba_t_de_student.ipynb
+++ b/python/prueba_estadística/prueba_t_de_student.ipynb
@@ -5,7 +5,7 @@
    "id": "9e88cc6d-f038-4141-9706-adb1da5dc086",
    "metadata": {},
    "source": [
-    "## **Diseño de un experimiento: Relación entre consumo de pan integral y peso.**"
+    "## **Aplicación de prueba estadística: Relación entre consumo de pan integral y peso corporal.**"
    ]
   },
   {
@@ -1413,11 +1413,13 @@
    "id": "655e1160-b71a-43cb-a886-0144d6126224",
    "metadata": {},
    "source": [
-    "Finalmente, podemos concluir que, en el experimento realizado, el consumo de pan integral en lugar de marraqueta tiene un impacto significativo en el cambio de peso corporal. Se observó una diferencia promedio de 1.82 kilos entre ambos grupos durante el periodo evaluado: mientras que el grupo que consumió marraqueta presentó un aumento de 0.44 kilos, el grupo que consumió pan integral registró una reducción de 1.38 kilos.\n",
+    "En este ejercicio con datos simulados, los resultados muestran que el consumo de pan integral en lugar de marraqueta tendría un impacto significativo en el cambio de peso corporal. Se observó una diferencia promedio de 1.82 kilos entre ambos grupos durante el periodo evaluado: mientras que el grupo que consumió marraqueta presentó un aumento de 0.44 kilos, el grupo que consumió pan integral registró una reducción de 1.38 kilos.\n",
     "\n",
     "Asimismo, se analizaron otras variables potencialmente influyentes en el cambio de peso, como la ingesta calórica, los pasos diarios, la edad y la adherencia a la dieta. Sin embargo, ninguna de ellas mostró una correlación significativa con la variable de cambio de peso, ni en el grupo control ni en el experimental.\n",
     "\n",
-    "En consecuencia, respaldados en los resultados de la prueba t de Student —que arrojó una diferencia estadísticamente significativa entre las medias de ambos grupos— es posible rechazar la hipótesis nula y apoyar la hipótesis alternativa, según la cual el tipo de pan consumido influye de manera determinante en el cambio de peso corporal."
+    "En consecuencia, respaldados en los resultados de la prueba t de Student —que arrojó una diferencia estadísticamente significativa entre las medias de ambos grupos— es posible rechazar la hipótesis nula y apoyar la hipótesis alternativa, según la cual el tipo de pan consumido influye de manera determinante en el cambio de peso corporal.\n",
+    "\n",
+    "Aunque estos resultados no corresponden a un estudio empírico, constituyen un ejemplo pedagógico de cómo aplicar e interpretar una prueba estadística en un diseño de dos grupos independientes."
    ]
   }
  ],
